Fixed input on safari

--- a/src/components/_common/_form.sass
+++ b/src/components/_common/_form.sass
@@ -25,3 +25,5 @@ select
   user-select: none
   option
     user-select: none
+input
+  -webkit-user-select: text !important
